[gd_scene load_steps=6 format=1]

[ext_resource path="res://scenes/game/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/imgs/standard_player.tex" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 3, 19 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 5, 21 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]

transform/scale = Vector2( 2, 2 )
z/z = 1
input/pickable = false
collision/layers = 3
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
speed = 400

[node name="SingleBar" type="Node2D" parent="."]

[node name="Bat1" type="KinematicBody2D" parent="SingleBar" groups=[
"player",
]]

visibility/behind_parent = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, -0.107319 )
shapes/1/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="AnimatedSprite" type="AnimatedSprite" parent="SingleBar/Bat1"]

frames = SubResource( 3 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SingleBar/Bat1"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="InteractionArea" type="Area2D" parent="SingleBar/Bat1"]

input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="PlayerInteractionShape" type="CollisionShape2D" parent="SingleBar/Bat1"]

transform/pos = Vector2( 0, -0.107319 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[node name="DoubleBar" type="Node2D" parent="."]

visibility/visible = false

[node name="Bat1" type="KinematicBody2D" parent="DoubleBar" groups=[
"player",
]]

visibility/behind_parent = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -45 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, -45 )
shapes/1/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="AnimatedSprite" type="AnimatedSprite" parent="DoubleBar/Bat1"]

transform/pos = Vector2( 0, -45 )
frames = SubResource( 3 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoubleBar/Bat1"]

transform/pos = Vector2( 0, -45 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="InteractionArea" type="Area2D" parent="DoubleBar/Bat1"]

transform/pos = Vector2( 0, -45 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="PlayerInteractionShape" type="CollisionShape2D" parent="DoubleBar/Bat1"]

transform/pos = Vector2( 0, -45 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[node name="Bat2" type="KinematicBody2D" parent="DoubleBar" groups=[
"player",
]]

editor/display_folded = true
visibility/behind_parent = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 45 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 45 )
shapes/1/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="AnimatedSprite" type="AnimatedSprite" parent="DoubleBar/Bat2"]

transform/pos = Vector2( 0, 45 )
frames = SubResource( 3 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoubleBar/Bat2"]

transform/pos = Vector2( 0, 45 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="InteractionArea" type="Area2D" parent="DoubleBar/Bat2"]

transform/pos = Vector2( 0, 45 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="PlayerInteractionShape" type="CollisionShape2D" parent="DoubleBar/Bat2"]

transform/pos = Vector2( 0, 45 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[node name="TripleBar" type="Node2D" parent="."]

visibility/visible = false

[node name="Bat1" type="KinematicBody2D" parent="TripleBar" groups=[
"player",
]]

visibility/behind_parent = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, -0.107319 )
shapes/1/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="AnimatedSprite" type="AnimatedSprite" parent="TripleBar/Bat1"]

frames = SubResource( 3 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TripleBar/Bat1"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="InteractionArea" type="Area2D" parent="TripleBar/Bat1"]

input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="PlayerInteractionShape" type="CollisionShape2D" parent="TripleBar/Bat1"]

transform/pos = Vector2( 0, -0.107319 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[node name="Bat2" type="KinematicBody2D" parent="TripleBar" groups=[
"player",
]]

visibility/behind_parent = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -90 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, -90 )
shapes/1/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="AnimatedSprite" type="AnimatedSprite" parent="TripleBar/Bat2"]

transform/pos = Vector2( 0, -90 )
frames = SubResource( 3 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TripleBar/Bat2"]

transform/pos = Vector2( 0, -90 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="InteractionArea" type="Area2D" parent="TripleBar/Bat2"]

transform/pos = Vector2( 0, -90 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="PlayerInteractionShape" type="CollisionShape2D" parent="TripleBar/Bat2"]

transform/pos = Vector2( 0, -90 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[node name="Bat3" type="KinematicBody2D" parent="TripleBar" groups=[
"player",
]]

visibility/behind_parent = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 90 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 90 )
shapes/1/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="AnimatedSprite" type="AnimatedSprite" parent="TripleBar/Bat3"]

transform/pos = Vector2( 0, 90 )
frames = SubResource( 3 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TripleBar/Bat3"]

transform/pos = Vector2( 0, 90 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="InteractionArea" type="Area2D" parent="TripleBar/Bat3"]

transform/pos = Vector2( 0, 90 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="PlayerInteractionShape" type="CollisionShape2D" parent="TripleBar/Bat3"]

transform/pos = Vector2( 0, 90 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1


